Open WebUI instructions

--- a/k8/open-web-ui/config-open-webui.yaml
+++ b/k8/open-web-ui/config-open-webui.yaml
@@ -4,7 +4,7 @@ metadata:
   name: open-webui-config
 data:
   OPENAI_API_BASE: http://vllm.rhaiis.svc.cluster.local:8000
-  OPENAI_API_BASE_URL: http://vllm.rhaiis.svc.cluster.local:8000
+  OPENAI_API_BASE_URL: http://vllm.rhaiis.svc.cluster.local:8000/v1
   OPENAI_API_KEY: dummy
   WEBUI_SECRET_KEY: super-secret-key
   WEBUI_AUTH: "false"
